# autochuner

./: .gitignore  README.md
backend/: Dockerfile  README.md  app.py  autotuner.py  main.py  pyproject.toml  requirements.txt
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.cjs
frontend/src/: App.jsx  index.css
frontend/src/components/: PitchGraph.jsx  Waveform.jsx
